# leyline

./: .dockerignore  .gitignore  .gitmodules  .upstream-installed  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LEGAL.md  LOG.md  NOTICE  README.md  REFLECTIONS.md  SESSION-LOG.md  TODO.md  build.gradle.kts  detekt-baseline.xml  detekt.yml  ghvjrdj1npl9kbckocsiflrlnfdacn2q.darc  gradle.properties  justfile  leyline.toml  manifest  playtest.toml  pom.xml  pyproject.toml  seat1-accumulate  seat1-decoded  settings.gradle.kts
.beads/: metadata.json
.claude/: settings.json
account/: build.gradle.kts  detekt-baseline.xml
buildSrc/: build.gradle.kts
buildscripts/: java.just  test-summary.py
decks/: demonic-pact.txt  green-stompy.txt  mono-black-midrange.txt  mono-red-rally.txt  pauper-elves.txt  simple-test.txt
deploy/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  services-proxy.example.conf  services.conf  setup.sh
docs/: 2026-03-01-annotation-variance-report.md  2026-03-08-annotation-variance-report.md  BUGS.md  REFLECTIONS.md  RELEASING.md  SESSION.md  TODO.md  action-format.md  action-types.md  actions.md  (+80 more)
launcher/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: arena.rs  main.rs  server.rs  tls.rs
tools/py/: pyproject.toml
tools/py/src/leyline_tools/: __init__.py
tools/py/src/leyline_tools/arena/: __init__.py  board.py  bot_match.py  capture.py  cli.py  common.py  debug_api.py  diagnostics.py  flows.py  gameplay.py  hand.py  interaction.py  macos.py  nav.py  paths.py  play.py  screens.py  screens_data.py  scry_bridge.py  session_log.py  shell.py  turn.py
tools/py/src/leyline_tools/arena/commands/: __init__.py  input.py  state.py
tools/py/src/leyline_tools/deck/: cli.py  collection.py  coverage.py
tools/py/src/leyline_tools/scry/: accumulator.py  cards.py  cli.py  errors.py  parser.py  server.py  tracker.py
(+1791 files in other folders)
