[package]
name = "leyline-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }
dirs = "6"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring", "x509-parser"] }
x509-parser = "0.16"
time = "0.3"
log = "0.4"
tauri-plugin-log = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
