[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leyline-tools"
version = "0.1.0"
description = "Python tooling for leyline automation and inspection"
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.0.0",
    "pyobjc-framework-quartz>=11.0; sys_platform == 'darwin'",
]

[project.scripts]
arena = "leyline_tools.arena.cli:main"
scry = "leyline_tools.scry.cli:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/leyline_tools"]
